[package]
name = "hollywood-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = { version = "3.1.3", features = ["derive"] }
hollywood = { path = "../hollywood" }