[package]
name = "hollywood-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hollywood = { path = "../hollywood" }
# hollywood-macro = { path = "../hollywood-macro" }
toml = "0.4.2"
tokio-test = "*"
