[package]
name = "hollywood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-channel = "1.6.1"
async-trait = "0.1.52"
local-ip-address = "0.4.4"
log = "0.4.14"
nats = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }