[package]
name = "actor-y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hollywood = { path = "../../hollywood" }
types = { path = "../types" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
# futures = "0.3"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
