[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hollywood = { path = "../../hollywood" }
system = { path = "../system" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }